--- a/main.ipynb
+++ b/main.ipynb
@@ -85,11 +85,11 @@
     }
    ],
    "source": [
-    "customers = pd.read_csv('./data/customers.csv').sample(frac=0.10, random_state=42)  # 10% sample\n",
-    "terminals = pd.read_csv('./data/terminals.csv').sample(frac=0.50, random_state=42)  # 50% sample\n",
-    "merchants = pd.read_csv('./data/merchants.csv').sample(frac=0.15, random_state=42)  # 15% sample\n",
-    "transactions_train = pd.read_csv('./data/transactions_train.csv').sample(frac=0.02, random_state=42)  # 2% sample\n",
-    "transactions_test = pd.read_csv('./data/transactions_test.csv').sample(frac=0.05, random_state=42)  # 5% sample"
+    "customers = pd.read_csv('./data/customers.csv').sample(frac=0.10, random_state=42)\n",
+    "terminals = pd.read_csv('./data/terminals.csv').sample(frac=0.50, random_state=42)\n",
+    "merchants = pd.read_csv('./data/merchants.csv').sample(frac=0.15, random_state=42)\n",
+    "transactions_train = pd.read_csv('./data/transactions_train.csv').sample(frac=0.02, random_state=42)\n",
+    "transactions_test = pd.read_csv('./data/transactions_test.csv').sample(frac=0.05, random_state=42)"
    ]
   },
   {
