--- a/main.ipynb
+++ b/main.ipynb
@@ -79,8 +79,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1696/3021644446.py:4: DtypeWarning: Columns (18) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  transactions_train = pd.read_csv('./data/transactions_train.csv').sample(frac=0.02, random_state=42)  # 2% sample\n"
+      "/tmp/ipykernel_2538/1505012635.py:4: DtypeWarning: Columns (18) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  transactions_train = pd.read_csv('./data/transactions_train.csv').sample(frac=0.02, random_state=42)\n"
      ]
     }
    ],
@@ -458,7 +458,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1696/3786829266.py:2: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
+      "/tmp/ipykernel_2538/3786829266.py:2: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
       "  plt.boxplot([transactions_train[transactions_train['TX_FRAUD'] == 0]['TX_AMOUNT'],\n"
      ]
     },
@@ -1109,11 +1109,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model accuracy (R² score): -106.10%\n",
+      "Mean Squared Error: 0.0504\n"
+     ]
+    }
+   ],
    "source": [
-    "y_pred = model.predict(X_test)"
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "test_data_filtered = data.loc[X_test.index]\n",
+    "output = pd.DataFrame({\n",
+    "    'TX_ID': test_data_filtered['TX_ID'],\n",
+    "    'TX_FRAUD_PREDICTED': y_pred\n",
+    "})\n",
+    "output.to_csv('kaggle_fraud_predictions.csv', index=False)\n",
+    "\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "\n",
+    "# Print the R² score as percentage and MSE\n",
+    "print(f\"Model accuracy (R² score): {r2 * 100:.2f}%\")\n",
+    "print(f\"Mean Squared Error: {mse:.4f}\")"
    ]
   },
   {
@@ -1249,7 +1272,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1263,7 +1286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
